feat(simulated annealing): Judment and Mutation cleaning up code