@@ -37,7 +37,7 @@ class SimulatedAnnealingTest {
 
         Event event = new Event(
                 new ArrayList<>(List.of(1)),
-                new ArrayList<>(Arrays.asList(new Athlete(
+                new ArrayList<>(List.of(new Athlete(
                         1,
                         "ÖSK",
                         "Alexander",
@@ -47,7 +47,7 @@ class SimulatedAnnealingTest {
                 ))),
                 Stations.Station.LONG_TRIPLE_I,
                 Disciplines.Discipline.TRIPLE_JUMP,
-                Trials.Trial.TRIAL_I,
+                Trials.Trial.TRIAL,
                 AgeGroups.AgeGroup.NINETEEN_AND_OVER,
                 Gender.MALE
         );
@@ -64,7 +64,7 @@ class SimulatedAnnealingTest {
                 ))),
                 Stations.Station.LONG_TRIPLE_II,
                 Disciplines.Discipline.TRIPLE_JUMP,
-                Trials.Trial.TRIAL_I,
+                Trials.Trial.TRIAL,
                 AgeGroups.AgeGroup.NINETEEN_AND_OVER,
                 Gender.MALE
         );
@@ -81,7 +81,7 @@ class SimulatedAnnealingTest {
                 ))),
                 Stations.Station.LONG_TRIPLE_II,
                 Disciplines.Discipline.TRIPLE_JUMP,
-                Trials.Trial.TRIAL_I,
+                Trials.Trial.TRIAL,
                 AgeGroups.AgeGroup.NINETEEN_AND_OVER,
                 Gender.MALE
         );
@@ -99,7 +99,7 @@ class SimulatedAnnealingTest {
                 ))),
                 Stations.Station.POLE_VAULT,
                 Disciplines.Discipline.POLE_VAULT,
-                Trials.Trial.TRIAL_I,
+                Trials.Trial.TRIAL,
                 AgeGroups.AgeGroup.NINETEEN_AND_OVER,
                 Gender.MALE
         );
@@ -116,7 +116,7 @@ class SimulatedAnnealingTest {
                 ))),
                 Stations.Station.POLE_VAULT,
                 Disciplines.Discipline.POLE_VAULT,
-                Trials.Trial.TRIAL_I,
+                Trials.Trial.TRIAL,
                 AgeGroups.AgeGroup.NINETEEN_AND_OVER,
                 Gender.MALE
         );
